--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+h1 {
+    color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 ul {
     list-style: none;
     margin: 0px;
@@ -26,4 +31,8 @@ span {
 .checked {
     text-decoration: line-through;
     font-weight: bold;
+}
+.completion{
+    background-color: rgb(121, 121, 121);
+    padding: 10px;
 }
